[project]
name = "water-reconciler"
version = "0.1.0"
description = "Simple ML based solution to reconcile water usage based on previous consumption pattern"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "rich>=14.0.0",
    "scikit-learn>=1.7.0",
    "xgboost>=3.0.2",
]
